--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!-- Web sitesi yapısı -->
 <h1>Mücahit Doğan</h1>
 <h2>Hakkımda</h2>
-<p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum.</p>
+<!-- Paragraf yapısı -->
+<p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum...</p>
 <h2>Sevdiğim Basketbol Oyuncusu</h2>
 <h3>Dwyane Wade</h3>
 <p>Onu izlemeyi 2005 yılında başladım. Oyununu ve stilini çok beğeniyorum.</p>
