index.html changed

--- a/index.html
+++ b/index.html
@@ -6,3 +6,22 @@
 <h2>Sevdiğim Basketbol Oyuncusu</h2>
 <h3>Dwyane Wade</h3>
 <p>Onu izlemeyi 2005 yılında başladım. Oyununu ve stilini çok beğeniyorum.</p>
+
+<h3>İlgi Alanlarım</h2>
+<ol>Film
+    <li>Of Mice and Men</li>
+    <li>Papillon</li>
+    <li>Life</li>
+</ol>
+<ol>Dizi
+    <li>Vikings</li>
+    <li>Mr. Robot</li>
+    <li>Prison Break</li>
+</ol>
+<ol>Kitap
+    <li>The Brothers Karamazov </li>
+    <li>Faust</li>
+    <li>Crime And Punishment</li>
+</ol>
+
+<img src="./img/wadefinals.jpg" alt="Wade NBA Finals">
