--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
 <p>Onu izlemeyi 2005 yılında başladım. Oyununu ve stilini çok beğeniyorum.</p>
 
 <h3>İlgi Alanlarım</h2>
-<ol>Film
-    <li>Of Mice and Men</li>
-    <li>Papillon</li>
-    <li>Life</li>
-</ol>
-<ol>Dizi
-    <li>Vikings</li>
-    <li>Mr. Robot</li>
-    <li>Prison Break</li>
-</ol>
-<ol>Kitap
-    <li>The Brothers Karamazov </li>
-    <li>Faust</li>
-    <li>Crime And Punishment</li>
+<ol>
+    <li>Film
+        <ul>Of Mice and Men</ul>
+        <ul>Papillon</ul>
+        <ul>Life</ul>
+    </li>
+    <li>Dizi
+        <ul>Vikings</ul>
+        <ul>Mr. Robot</ul>
+        <ul>Prison Break</ul>
+    </li>
+    <li>Kitap
+        <ul>The Brothers Karamazov</ul>
+        <ul>Faust</ul>
+        <ul>Crime And Punishment</ul>
+    </li>
 </ol>
 
 <img src="./img/wadefinals.jpg" alt="Wade NBA Finals">
