--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <h2>Hakkımda</h2>
 <!-- Paragraf yapısı -->
 <p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum...</p>
-<h2>Sevdiğim Basketbol Oyuncusu</h2>
-<h3>Dwyane Wade</h3>
-<p>Onu izlemeyi 2005 yılında başladım. Oyununu ve stilini çok beğeniyorum.</p>
 
+link
 <h3>İlgi Alanlarım</h2>
 <ol>
     <li>Film
-        <ul>Of Mice and Men</ul>
+        <ul>
+            <a href="https://en.wikipedia.org wiki/Of_Mice_and_Men_(1992_film)">Of Mice and Men<a>
+        </ul>
         <ul>Papillon</ul>
         <ul>Life</ul>
     </li>
     <li>Dizi
-        <ul>Vikings</ul>
+        <ul>
+            <a href="https://www.imdb.com/title/tt2306299/">Vikings</a>
+        </ul>
         <ul>Mr. Robot</ul>
         <ul>Prison Break</ul>
     </li>
@@ -25,5 +27,12 @@
         <ul>Crime And Punishment</ul>
     </li>
 </ol>
+<h2>Sevdiğim Diziler</h2>
+<p><strong>Vikings</strong></p>
 
-<img src="./img/wadefinals.jpg" alt="Wade NBA Finals">
+<img src="../img/vikings.jpg" width="400" height="400" alt="Vikings Tv Series">
+
+<p>Vikings, "Vikingler" tarihsel drama türünde bir Kanada-İrlanda ortak yapımı televizyon dizisi.Yazarlığını ve yapımcılığını Michael Hirst'in yaptığı dizi History kanalında yayınlanmaktadır.ABD ve Kanada'da 3 Mart 2013 günü yayına başlamıştır.</p>
+
+
+
