--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <!-- Paragraf yapısı -->
 <p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum...</p>
 
-link
 <h3>İlgi Alanlarım</h2>
 <ol>
     <li>Film
         <ul>
-            <a href="https://en.wikipedia.org wiki/Of_Mice_and_Men_(1992_film)">Of Mice and Men<a>
+            <a href="https://www.imdb.com/title/tt0105046/">Of Mice and Men<a>
         </ul>
         <ul>Papillon</ul>
         <ul>Life</ul>
@@ -27,10 +26,12 @@ link
         <ul>Crime And Punishment</ul>
     </li>
 </ol>
+
 <h2>Sevdiğim Diziler</h2>
+
 <p><strong>Vikings</strong></p>
 
-<img src="../img/vikings.jpg" width="400" height="400" alt="Vikings Tv Series">
+<img src="./img/vikings.jpg" width="800" height="400" alt="Vikings Tv Series">
 
 <p>Vikings, "Vikingler" tarihsel drama türünde bir Kanada-İrlanda ortak yapımı televizyon dizisi.Yazarlığını ve yapımcılığını Michael Hirst'in yaptığı dizi History kanalında yayınlanmaktadır.ABD ve Kanada'da 3 Mart 2013 günü yayına başlamıştır.</p>
 
