bullet list item

--- a/index.html
+++ b/index.html
@@ -5,25 +5,34 @@
 <p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum...</p>
 
 <h3>İlgi Alanlarım</h2>
+
 <ol>
     <li>Film
         <ul>
+            <li>
             <a href="https://www.imdb.com/title/tt0105046/">Of Mice and Men<a>
+            </li>
         </ul>
-        <ul>Papillon</ul>
-        <ul>Life</ul>
+        <li>Papillon</li>
+        <li>Life</li>
     </li>
+    
     <li>Dizi
         <ul>
-            <a href="https://www.imdb.com/title/tt2306299/">Vikings</a>
+            <li>
+                <a href="https://www.imdb.com/title/tt2306299/">Vikings</a>
+            </li>
+            <li>Mr. Robot</li>
+            <li>Prison Break</li>
         </ul>
-        <ul>Mr. Robot</ul>
-        <ul>Prison Break</ul>
     </li>
+
     <li>Kitap
-        <ul>The Brothers Karamazov</ul>
-        <ul>Faust</ul>
-        <ul>Crime And Punishment</ul>
+        <ul>
+            <li>The Brothers Karamazov</li>
+            <li>Faust</li>
+            <li>Crime And Punishment</li>
+        </ul>
     </li>
 </ol>
 
