--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!-- Web sitesi yapısı -->
 <h1>Mücahit Doğan</h1>
-<h2>Hakkımda</h2>
+<h3>Hakkımda</h3>
 <!-- Paragraf yapısı -->
 <p>Merhaba, Ben Mücahit. Basketbol oynamaktan hoşlanıyorum...</p>
 
@@ -30,7 +30,9 @@
 
     <li>Kitap
         <ul>
-            <li>The Brothers Karamazov</li>
+            <li>
+                <a href="https://www.goodreads.com/book/show/4934.The_Brothers_Karamazov">The Brothers Karamazov</a>
+            </li>
             <li>Faust</li>
             <li>Crime And Punishment</li>
         </ul>
@@ -45,5 +47,15 @@
 
 <p>Vikings, "Vikingler" tarihsel drama türünde bir Kanada-İrlanda ortak yapımı televizyon dizisi.Yazarlığını ve yapımcılığını Michael Hirst'in yaptığı dizi History kanalında yayınlanmaktadır.ABD ve Kanada'da 3 Mart 2013 günü yayına başlamıştır.</p>
 
+<hr>
 
+<p><strong>Mr. Robot</strong></p>
+<img src="./img/mr-robot.jpg" width="800" height="400" alt="Mr. Robot Tv Series">
+<p>Mr. Robot, Sam Esmail tarafından kaleme alınmış Amerikan psikolojik gerilim-dram televizyon dizisi.
+Dizinin baş karakteri Elliot Alderson (Rami Malek), sosyal anksiyete bozukluğu, çoklu kişilik bozukluğu, klinik depresyon, şizofreni ve uyuşturucu bağımlılığı ile boğuşan bir siber güvenlik uzmanı ve hacker'dır. Elliot, "Mr. Robot" (Christian Slater) lakabıyla tanınan bir anarşist tarafından "fsociety" adlı hacktivist gruba katılmaya davet edilir. Grubun amacı, dünyanın en büyük şirketler topluluğu olana E Corp'un finansal verilerini şifreleyerek tüm borç kayıtlarını yok etmektir.</p>
 
+<hr>
+
+<p><strong>Prison Break</strong></p>
+<img src="./img/prison-break.jpg" width="800" height="400" alt="Prison Break Tv Series">
+<p>Büyük Kaçış (Orijinal adı: Prison Break), ABD yapımı bir aksiyon dizisi. Hikâyesi Paul Scheuring tarafından ortaya atılmış ve FOX şirketi tarafından 2005 yılında dizi olarak hayatına adım atmıştır. Dizi genel olarak işlemediği bir suçtan dolayı idam cezası almış Lincoln Burrows (Dominic Purcell) 'u ve Lincoln'ün kardeşi Michael Scofield (Wentworth Miller)'ın kardeşini kurtarmak için tüm yasal yolların tükendiğini fark edip onu hapishaneden çıkarmak için bir kaçış planı yapması ve sonrasında gelişen olayları konu alır.</p>
